Update Status header with icons

--- a/admin/index.html
+++ b/admin/index.html
@@ -121,7 +121,7 @@ th { background:#222; color:#fff }
         <th>Nazwisko</th>
         <th>Telefon</th>
         <th>Email</th>
-       <th>Status</th>
+       <th>Status❌✅⌛</th>
         <th>Pokaż kontakt</th>
         <th>Zapisz</th>
       </tr>
