--- a/admin/index.html
+++ b/admin/index.html
@@ -121,7 +121,7 @@ th { background:#222; color:#fff }
         <th>Nazwisko</th>
         <th>Telefon</th>
         <th>Email</th>
-       <th>Status❌✅⌛</th>
+       <th>Status</th>
         <th>Pokaż kontakt</th>
         <th>Zapisz</th>
       </tr>
@@ -226,7 +226,7 @@ async function loadData() {
       <td data-label="Nazwisko"><input value="${row.nazwisko || ""}"></td>
       <td data-label="Telefon"><input value="${row.telefon || ""}"></td>
       <td data-label="Email"><input value="${row.email || ""}"></td>
-<td data-label="Status"><input value="${row.status || ""}"></td>
+<td data-label="Status❌✅⌛"><input value="${row.status || ""}"></td>
       <td data-label="Pokaż kontakt" style="text-align:center">
         <input type="checkbox" ${row.show_contact ? "checked" : ""}>
       </td>
