--- a/admin/index.html
+++ b/admin/index.html
@@ -238,9 +238,9 @@ async function loadData() {
       <td data-label="Status">
         <select>
           <option value="" ${statusValue === "" ? "selected" : ""}>-</option>
-          <option value="inactive" ${statusValue === "inactive" ? "selected" : ""}>❌ Nieaktywny</option>
-          <option value="active" ${statusValue === "active" ? "selected" : ""}>✅ Aktywny</option>
-          <option value="pending" ${statusValue === "pending" ? "selected" : ""}>⌛ Oczekuje</option>
+          <option value="inactive" ${statusValue === "inactive" ? "selected" : ""}>❌</option>
+          <option value="active" ${statusValue === "active" ? "selected" : ""}>✅</option>
+          <option value="pending" ${statusValue === "pending" ? "selected" : ""}>⌛</option>
         </select>
       </td>
       <td data-label="Pokaż kontakt" style="text-align:center">
