--- a/profil/index.html
+++ b/profil/index.html
@@ -124,9 +124,9 @@ const statusEl = document.getElementById("status");
 const gwiazdkiLine = document.getElementById("gwiazdkiLine");
 
 const statusMap = {
-  "✅": { text: "Status ELEKTRYKA - zweryfikowany", class: "status-ok" },
-  "⌛": { text: "Status ELEKTRYKA - w trakcie weryfikacji", class: "status-wait" },
-  "❌": { text: "Status ELEKTRYKA - aktualnie brak weryfikacji", class: "status-no" }
+  "✅": { text: "Status ELEKTRYKA - zweryfikowany 🙂", class: "status-ok" },
+  "⌛": { text: "Status ELEKTRYKA - w trakcie weryfikacji 😴", class: "status-wait" },
+  "❌": { text: "Status ELEKTRYKA - aktualnie brak weryfikacji 😕", class: "status-no" }
 };
 
 /* === DODANE FUNKCJE MASKUJĄCE === */
